--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
         <h2 class="mb-3 text-center">FOTOS DOS ALUNOS</h2>
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, iste tenetur autem optio vero ab quisquam. Rerum illum nemo non nihil cumque. Distinctio temporibus nemo tenetur, culpa qui quo nisi!</p>
+        <p>A alma da Unisoft é seus alunos, o amor que eles tem por aprender tecnologia nos motiva a seguir em frente para poder proporcionar a eles uma experiência excelente.</p>
 
 
 
